--- a/src/sass/_fonts.sass
+++ b/src/sass/_fonts.sass
@@ -1,1 +1,2 @@
-@include font-face('Circe', 'Circe', 400)
+@include font-face('Montserrat', 'Montserrat-Bold', 700)
+@include font-face('Montserrat', 'Montserrat-Regular', 400)
