--- a/src/sass/_settings.sass
+++ b/src/sass/_settings.sass
@@ -11,9 +11,9 @@ html
 body
 	margin: 0
 	height: 100%
-	font-family: 'Circe', sans-serif
+	font-family: 'Montserrat', sans-serif
 	font-weight: 400
-	+adaptive-font(18, 16)
+	font-size: 18px
 	color: $black
 	background-color: $white
 
