--- a/src/sass/_vars.sass
+++ b/src/sass/_vars.sass
@@ -1,7 +1,8 @@
 // * Максимальная ширина макета
-$container-width: 1400
+$container-width: 1180
 
 // * Colors
 $black: #000
 $white: #fff
-$bg-color: #e27d5f
+$bg-color: #ffe1bd
+$text-color: #656565
