--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -16,7 +16,7 @@
 	&:hover
 		color: $black
 		background-color: transparent
-		border-color: #d8d8d8
+		border-color: $black
 
 	&--transparent
 		color: $black
