--- a/src/components/header/_header.sass
+++ b/src/components/header/_header.sass
@@ -1,6 +1,6 @@
 .header
 	width: 100%
-	background-color: $bg-color
+	background-color: transparent
 
 	&.fixed
 		position: fixed
@@ -14,7 +14,7 @@
 		justify-content: space-between
 		margin: 0 auto
 		padding: 10px 15px
-		min-height: 70px
+		min-height: 155px
 		max-width: $container-width + px
 
 	&__logo
@@ -22,7 +22,7 @@
 		display: block
 
 .logo__img
-	width: 200px
+	width: 105px
 	height: auto
 	fill: $white
 
@@ -43,8 +43,9 @@
 
 	&__link
 		position: relative
-		color: $white
-		+adaptive-font(18, 16)
+		color: $black
+		font-size: 18px
+		opacity: .75
 
 		&::after
 			content: ''
