--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -1,7 +1,7 @@
 <header class="header">
 	<div class="header__container">
 		<a href="#" class="header__logo logo">
-			<img class="logo__img" src="@img/header/logo.png" alt="Logo">
+			<img class="logo__img" src="@img/header/logo.png" alt="Logo" />
 		</a>
 		<div class="header__menu menu">
 			<button class="menu__burger burger btn-reset">
@@ -10,13 +10,19 @@
 			<nav class="menu__body">
 				<ul class="menu__list list-reset">
 					<li class="menu__item">
-						<a class="menu__link link-reset" data-goto=".section-1" href="#">Раздел №1</a>
+						<a class="menu__link link-reset" data-goto=".section-1" href="#">about us</a>
 					</li>
 					<li class="menu__item">
-						<a class="menu__link link-reset" data-goto=".section-2" href="#">Раздел №2</a>
+						<a class="menu__link link-reset" data-goto=".section-2" href="#">services</a>
 					</li>
 					<li class="menu__item">
-						<a class="menu__link link-reset" data-goto=".section-3" href="#">Раздел №3</a>
+						<a class="menu__link link-reset" data-goto=".section-3" href="#">works</a>
+					</li>
+					<li class="menu__item">
+						<a class="menu__link link-reset" data-goto=".section-4" href="#">blog</a>
+					</li>
+					<li class="menu__item">
+						<a class="menu__link link-reset" data-goto=".section-5" href="#">contact</a>
 					</li>
 				</ul>
 			</nav>
