--- a/src/components/slider/_slider.sass
+++ b/src/components/slider/_slider.sass
@@ -2,21 +2,56 @@
 	position: relative
 	overflow: hidden
 	margin: 20px 0
-	border: 2px $accent-color dashed
-	border-radius: 20px
-	width: 600px
+	background-color: $bg-color
+	width: 100%
 	height: auto
 
 .swiper
+
+	&-slide
+		display: flex
+		align-items: center
+		justify-content: center
+		flex-direction: column
+		padding-top: 130px
+		padding-bottom: 100px
+
+		&__title
+			margin: 0
+			margin-bottom: 60px
+			font-size: 48px
+			font-weight: 700
+			color: $black
+			position: relative
+			&::after
+				content: ""
+				position: absolute
+				width: 55px
+				height: 2px
+				background-color: #000
+				bottom: -30px
+				left: 50%
+				transform: translateX(-50%)
+
+		&__text
+			margin: 0
+			margin-bottom: 80px
+			text-align: center
+			font-size: 24px
+			line-height: 32px
+			font-weight: 400
+			color: $black
 
 	&-btn
 		position: absolute
 		top: 50%
 		z-index: 5
-		width: 30px
-		height: 30px
+		width: 28px
+		height: 53px
 		transform: translateY(-50%)
-		+bg-center
+		background-position: center
+		background-repeat: no-repeat
+		background-size: cover
 
 		&--next
 			right: 20px
