--- a/src/components/slider/slider.html
+++ b/src/components/slider/slider.html
@@ -2,22 +2,28 @@
 	<div class="swiper">
 		<div class="swiper-wrapper">
 			<div class="swiper-slide">
-				<picture>
-					<source class="lazyload swiper-slide__item" data-srcset="img/sliders/slide-item-1.webp" type="image/webp">
-					<img class="lazyload swiper-slide__item" data-src="img/sliders/slide-item-1.jpg" alt="Слайд">
-				</picture>
+				<h1 class="swiper-slide__title">we are devtest.</h1>
+				<p class="swiper-slide__text">
+					professionals <br />
+					in the creative industries
+				</p>
+				<a href="#/" class="link link-reset">get in touch</a>
 			</div>
 			<div class="swiper-slide">
-				<picture>
-					<source class="lazyload swiper-slide__item" data-srcset="img/sliders/slide-item-2.webp" type="image/webp">
-					<img class="lazyload swiper-slide__item" data-src="img/sliders/slide-item-2.jpg" alt="Слайд">
-				</picture>
+				<h1 class="swiper-slide__title">Kostya zchopa.</h1>
+				<p class="swiper-slide__text">
+					professionals <br />
+					in the creative industries
+				</p>
+				<a href="#/" class="link link-reset">get in touch</a>
 			</div>
 			<div class="swiper-slide">
-				<picture>
-					<source class="lazyload swiper-slide__item" data-srcset="img/sliders/slide-item-3.webp" type="image/webp">
-					<img class="lazyload swiper-slide__item" data-src="img/sliders/slide-item-3.jpg" alt="Слайд">
-				</picture>
+				<h1 class="swiper-slide__title">we are devtest.</h1>
+				<p class="swiper-slide__text">
+					professionals <br />
+					in the creative industries
+				</p>
+				<a href="#/" class="link link-reset">get in touch</a>
 			</div>
 		</div>
 		<div class="swiper-btn swiper-btn--prev btn-reset"></div>
