--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -10,8 +10,8 @@
 // @import "libs/animate"
 
 // * Подключение стилей swiper-слайдера
-// @import "libs/swiper-bundle.min"
-// @import "components/sliders"
+@import "libs/swiper-bundle.min"
+@import "../components/slider/slider"
 
 // * Main styles
 @import '../components/header/header'
