--- a/src/components/slider/slider.html
+++ b/src/components/slider/slider.html
@@ -10,7 +10,7 @@
 				<a href="#/" class="link link-reset">get in touch</a>
 			</div>
 			<div class="swiper-slide">
-				<h1 class="swiper-slide__title">Kostya zchopa.</h1>
+				<h1 class="swiper-slide__title">we are devtest.</h1>
 				<p class="swiper-slide__text">
 					professionals <br />
 					in the creative industries
@@ -26,7 +26,10 @@
 				<a href="#/" class="link link-reset">get in touch</a>
 			</div>
 		</div>
-		<div class="swiper-btn swiper-btn--prev btn-reset"></div>
-		<div class="swiper-btn swiper-btn--next btn-reset"></div>
+
+		<div class="swiper-pagination"></div>
+
+		<div class="swiper-btn swiper-btn--prev"></div>
+		<div class="swiper-btn swiper-btn--next"></div>
 	</div>
 </div>
