--- a/src/components/slider/_slider.sass
+++ b/src/components/slider/_slider.sass
@@ -42,6 +42,16 @@
 			font-weight: 400
 			color: $black
 
+	&-pagination-bullet
+		width: 13px
+		height: 13px
+		background-color: rgba(255,255,255,0.0)
+		border: 1px solid $black
+		opacity: 1
+
+		&-active
+			background-color: $black
+
 	&-btn
 		position: absolute
 		top: 50%
@@ -52,6 +62,7 @@
 		background-position: center
 		background-repeat: no-repeat
 		background-size: cover
+		cursor: pointer
 
 		&--next
 			right: 20px
