--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -10,7 +10,7 @@
 // @import "libs/animate"
 
 // * Подключение стилей swiper-слайдера
-@import "libs/swiper-bundle.min"
+@import "../../node_modules/swiper/swiper-bundle.min"
 @import "../components/slider/slider"
 
 // * Main styles
